--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,34 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Flask Plotlyjs Example</title>
+  <link rel="stylesheet"  href="../static/css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ 
 </head>
 
 <body>
-
+  <div class="topcorner">
+    <p><h3> <strong>Tolani Afolabi</strong></h3></p>
+        
+  </div>
+</div>
+  
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
+        <div class="topcorner">
+            <p><h3> <strong>Tolani Afolabi</strong></h3></p>
+                
+          </div>
       </div>
     </div>
+     
     <div class="row">
       <div class="col-md-2">
         <div class="well">
